// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Form Page 2 1`] = `
<div data-size="auto">
  <div>
    <div>
      <details
        data-active-step-label="Prosjektet"
        data-state="idle"
        open
      >
        <summary>
          <span>
            Testsøknad
          </span>
        </summary>
        <button
          data-state="idle"
          data-variant="default"
        >
          <div>
          </div>
          Kontaktinfo
        </button>
        <button
          aria-current="step"
          data-state="active"
          data-variant="default"
        >
          <div>
          </div>
          Prosjektet
        </button>
        <button
          data-state="idle"
          data-variant="default"
        >
          <div>
          </div>
          Dokumentasjon
        </button>
        <button
          data-state="idle"
          data-variant="submission"
        >
          <div>
          </div>
          Innsending
        </button>
        <button
          data-state="idle"
          data-variant="confirmation"
          disabled
        >
          <div>
          </div>
          Kvittering
        </button>
      </details>
    </div>
  </div>
  <div>
    <button
      command="show-modal"
      commandfor="_r_6_"
      data-color="neutral"
      data-variant="secondary"
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="none"
        focusable="false"
        height="1em"
        role="img"
        viewbox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M4 5.75a.25.25 0 1 0 0 .5.25.25 0 0 0 0-.5M2.25 6a1.75 1.75 0 1 1 3.5 0 1.75 1.75 0 0 1-3.5 0m1.5 6a.25.25 0 1 1 .5 0 .25.25 0 0 1-.5 0M4 10.25a1.75 1.75 0 1 0 0 3.5 1.75 1.75 0 0 0 0-3.5M3.75 18a.25.25 0 1 1 .5 0 .25.25 0 0 1-.5 0M4 16.25a1.75 1.75 0 1 0 0 3.5 1.75 1.75 0 0 0 0-3.5m5 1a.75.75 0 0 0 0 1.5h12a.75.75 0 0 0 0-1.5zM8.25 12a.75.75 0 0 1 .75-.75h12a.75.75 0 0 1 0 1.5H9a.75.75 0 0 1-.75-.75M9 5.25a.75.75 0 0 0 0 1.5h12a.75.75 0 0 0 0-1.5z"
          fill="currentColor"
          fill-rule="evenodd"
        >
        </path>
      </svg>
      Naviger
    </button>
    <dialog
      closedby="any"
      data-placement="center"
      id="<removed>"
      style="width: fit-content; min-width: 20rem;"
    >
      <button
        aria-label="Lukk dialogvindu"
        command="close"
        commandfor="_r_6_"
        data-color="neutral"
        data-icon="true"
        data-variant="tertiary"
        type="button"
      >
      </button>
      <h2>
        Skjemanavigasjon
      </h2>
      <div>
        <details
          data-active-step-label="Prosjektet"
          data-state="idle"
          open
        >
          <summary>
            <span>
              Testsøknad
            </span>
          </summary>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Kontaktinfo
          </button>
          <button
            aria-current="step"
            data-state="active"
            data-variant="default"
          >
            <div>
            </div>
            Prosjektet
          </button>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Dokumentasjon
          </button>
          <button
            data-state="idle"
            data-variant="submission"
          >
            <div>
            </div>
            Innsending
          </button>
          <button
            data-state="idle"
            data-variant="confirmation"
            disabled
          >
            <div>
            </div>
            Kvittering
          </button>
        </details>
      </div>
    </dialog>
  </div>
  <div data-color-scheme="light">
    <h1 data-size="md">
      Testsøknad
    </h1>
    <form
      data-show-optional="false"
      data-show-required="true"
      data-show-summary="true"
      data-variant="outline"
    >
      <h2 data-size="sm">
        Prosjektet
      </h2>
      <div>
      </div>
      <ds-field>
        <label
          data-weight="medium"
          for="<removed>"
        >
          <span>
            Tittel på prosjektet
          </span>
        </label>
        <div>
          <input
            aria-invalid="false"
            id="<removed>"
            name="projectTitle"
            required
            type="text"
          >
        </div>
      </ds-field>
      <ds-field>
        <label
          data-weight="medium"
          for="<removed>"
        >
          <span>
            Beskrivelse av prosjektet
          </span>
        </label>
        <div>
          <textarea
            aria-invalid="false"
            id="<removed>"
            name="projectDescription"
            required
            rows="4"
            style="--_ds-field-sizing: 124px;"
          >
          </textarea>
        </div>
      </ds-field>
      <fieldset
        aria-labelledby="<removed>"
        id="<removed>"
        tabindex="-1"
      >
        <legend
          data-weight="medium"
          id="<removed>"
        >
          <span>
            Kategori
          </span>
        </legend>
        <p
          data-variant="default"
          id="<removed>"
        >
          Hvilken kategori hører prosjektet til?
        </p>
        <ds-field data-clickdelegatefor="<removed>">
          <input
            aria-invalid="false"
            id="<removed>"
            name="projectCategory"
            required
            type="radio"
            value="Learning"
          >
          <label
            data-weight="regular"
            for="<removed>"
          >
            <span>
              Opplæring
            </span>
          </label>
        </ds-field>
        <ds-field data-clickdelegatefor="<removed>">
          <input
            aria-invalid="false"
            id="<removed>"
            name="projectCategory"
            required
            type="radio"
            value="social"
          >
          <label
            data-weight="regular"
            for="<removed>"
          >
            <span>
              Sosialt
            </span>
          </label>
        </ds-field>
        <ds-field data-clickdelegatefor="<removed>">
          <input
            aria-invalid="false"
            id="<removed>"
            name="projectCategory"
            required
            type="radio"
            value="activity"
          >
          <label
            data-weight="regular"
            for="<removed>"
          >
            <span>
              Aktivitet
            </span>
          </label>
        </ds-field>
        <details>
          <summary>
            Grunnen til at vi spør om dette
          </summary>
          <div>
            Tilskuddsordningen skal dekke et bredt spekter av tilbud. For å ha oversikt over fordelingen av budsjettposten trenger vi å vite hvilket tilbud det søkes om å utvide.
          </div>
        </details>
      </fieldset>
      <ds-field>
        <label
          data-weight="medium"
          for="<removed>"
        >
          <span>
            Gjennomføringssted
          </span>
        </label>
        <div
          data-field="description"
          id="<removed>"
        >
          Hvilket fylke vil prosjektet gjennomføres i?
        </div>
        <ds-suggestion>
          <input
            aria-autocomplete="list"
            aria-controls=":ds:4"
            aria-describedby="<removed>"
            aria-expanded="true"
            aria-invalid="false"
            aria-label="Gjennomføringssted​​​​​"
            autocomplete="off"
            data-label="Gjennomføringssted"
            id="<removed>"
            list=":ds:4"
            placeholder=" "
            popovertarget=":ds:4"
            required
            role="combobox"
            type="text"
          >
          <del
            aria-label="Tøm"
            hidden
            role="button"
          >
          </del>
          <u-datalist
            aria-multiselectable="false"
            data-nofilter
            data-sr-plural="%d forslag"
            data-sr-singular="%d forslag"
            hidden
            id="<removed>"
            popover="manual"
            role="listbox"
            tabindex="-1"
          >
            <u-option
              aria-disabled="false"
              aria-selected="false"
              label="Agder"
              role="option"
              tabindex="-1"
              value="Agder"
            >
              Agder
            </u-option>
            <u-option
              aria-disabled="false"
              aria-selected="false"
              label="Akershus"
              role="option"
              tabindex="-1"
              value="Akershus"
            >
              Akershus
            </u-option>
            <u-option
              aria-disabled="false"
              aria-selected="false"
              label="Buskerud"
              role="option"
              tabindex="-1"
              value="Buskerud"
            >
              Buskerud
            </u-option>
            <u-option
              aria-disabled="false"
              aria-selected="false"
              label="Finnmark"
              role="option"
              tabindex="-1"
              value="Finnmark"
            >
              Finnmark
            </u-option>
            <u-option
              aria-disabled="false"
              aria-selected="false"
              label="Innlandet"
              role="option"
              tabindex="-1"
              value="Innlandet"
            >
              Innlandet
            </u-option>
            <u-option
              aria-disabled="false"
              aria-selected="false"
              label="Møre og Romsdal"
              role="option"
              tabindex="-1"
              value="Møre og Romsdal"
            >
              Møre og Romsdal
            </u-option>
            <u-option
              aria-disabled="false"
              aria-selected="false"
              label="Nordland"
              role="option"
              tabindex="-1"
              value="Nordland"
            >
              Nordland
            </u-option>
            <u-option
              aria-disabled="false"
              aria-selected="false"
              label="Oslo"
              role="option"
              tabindex="-1"
              value="Oslo"
            >
              Oslo
            </u-option>
            <u-option
              aria-disabled="false"
              aria-selected="false"
              label="Rogaland"
              role="option"
              tabindex="-1"
              value="Rogaland"
            >
              Rogaland
            </u-option>
            <u-option
              aria-disabled="false"
              aria-selected="false"
              label="Telemark"
              role="option"
              tabindex="-1"
              value="Telemark"
            >
              Telemark
            </u-option>
            <u-option
              aria-disabled="false"
              aria-selected="false"
              label="Troms"
              role="option"
              tabindex="-1"
              value="Troms"
            >
              Troms
            </u-option>
            <u-option
              aria-disabled="false"
              aria-selected="false"
              label="Trøndelag"
              role="option"
              tabindex="-1"
              value="Trøndelag"
            >
              Trøndelag
            </u-option>
            <u-option
              aria-disabled="false"
              aria-selected="false"
              label="Vestfold"
              role="option"
              tabindex="-1"
              value="Vestfold"
            >
              Vestfold
            </u-option>
            <u-option
              aria-disabled="false"
              aria-selected="false"
              label="Vestland"
              role="option"
              tabindex="-1"
              value="Vestland"
            >
              Vestland
            </u-option>
            <u-option
              aria-disabled="false"
              aria-selected="false"
              label="Østfold"
              role="option"
              tabindex="-1"
              value="Østfold"
            >
              Østfold
            </u-option>
          </u-datalist>
          <select
            hidden
            id="<removed>"
            name="county"
          >
          </select>
        </ds-suggestion>
      </ds-field>
      <ds-field>
        <label
          data-weight="medium"
          for="<removed>"
        >
          <span>
            Aldersgruppe
          </span>
        </label>
        <div
          data-field="description"
          id="<removed>"
        >
          Hvilken aldersgruppe er prosjektet rettet mot?
        </div>
        <select
          aria-describedby="<removed>"
          aria-invalid="false"
          aria-label="Velg aldersgruppe"
          aria-readonly="false"
          id="<removed>"
          name="ageGroup"
          required
        >
          <option
            disabled
            selected
            value="blank"
          >
            Velg aldersgruppe
          </option>
          <option value="kindergarten">
            3-5 år
          </option>
          <option value="kids">
            6-12 år
          </option>
          <option value="youth">
            13-15 år
          </option>
          <option value="adult">
            16-19 år
          </option>
        </select>
      </ds-field>
      <div>
        <button
          data-variant="secondary"
          style="flex: 1 1 0%;"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="none"
            focusable="false"
            height="1em"
            role="img"
            viewbox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.97 6.97a.75.75 0 1 1 1.06 1.06l-3.22 3.22H19a.75.75 0 0 1 0 1.5H6.81l3.22 3.22a.75.75 0 1 1-1.06 1.06l-4.5-4.5a.75.75 0 0 1 0-1.06z"
              fill="currentColor"
            >
            </path>
          </svg>
          Forrige
        </button>
        <button
          data-variant="secondary"
          style="flex: 1 1 0%;"
          type="button"
        >
          Neste
          <svg
            aria-hidden="true"
            fill="none"
            focusable="false"
            height="1em"
            role="img"
            viewbox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.088 6.873a.75.75 0 0 1 .942.097l4.5 4.5a.75.75 0 0 1 0 1.06l-4.5 4.5a.75.75 0 0 1-1.06-1.06l3.22-3.22H5a.75.75 0 0 1-.75-.74V12a.75.75 0 0 1 .75-.75h12.19l-3.22-3.22a.75.75 0 0 1 .118-1.157"
              fill="currentColor"
            >
            </path>
          </svg>
        </button>
      </div>
      <dialog
        data-placement="center"
        id="<removed>"
        style="width: fit-content;"
      >
        <div>
          <h2 data-size="xs">
            Er du sikker på at du vil sende inn skjema?
          </h2>
          <div>
            <button
              data-variant="secondary"
              style="flex: 1 1 0%;"
              type="button"
            >
              Avbryt
            </button>
            <button
              data-variant="primary"
              style="flex: 2 1 0%;"
              type="submit"
            >
              Send inn
              <svg
                aria-hidden="true"
                fill="none"
                focusable="false"
                height="1em"
                role="img"
                viewbox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M6.317 4.32a.75.75 0 0 0-1.023.932L7.704 12l-2.41 6.748a.75.75 0 0 0 1.023.932l15-7a.75.75 0 0 0 0-1.36zm2.712 6.93L7.31 6.44 19.227 12 7.31 17.56l1.719-4.81H12.5a.75.75 0 0 0 0-1.5z"
                  fill="currentColor"
                  fill-rule="evenodd"
                >
                </path>
              </svg>
            </button>
          </div>
        </div>
      </dialog>
    </form>
  </div>
</div>
`;

exports[`Form Page 3 1`] = `
<div data-size="auto">
  <div>
    <div>
      <details
        data-active-step-label="Dokumentasjon"
        data-state="idle"
        open
      >
        <summary>
          <span>
            Testsøknad
          </span>
        </summary>
        <button
          data-state="idle"
          data-variant="default"
        >
          <div>
          </div>
          Kontaktinfo
        </button>
        <button
          data-state="idle"
          data-variant="default"
        >
          <div>
          </div>
          Prosjektet
        </button>
        <button
          aria-current="step"
          data-state="active"
          data-variant="default"
        >
          <div>
          </div>
          Dokumentasjon
        </button>
        <button
          data-state="idle"
          data-variant="submission"
        >
          <div>
          </div>
          Innsending
        </button>
        <button
          data-state="idle"
          data-variant="confirmation"
          disabled
        >
          <div>
          </div>
          Kvittering
        </button>
      </details>
    </div>
  </div>
  <div>
    <button
      command="show-modal"
      commandfor="_r_d_"
      data-color="neutral"
      data-variant="secondary"
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="none"
        focusable="false"
        height="1em"
        role="img"
        viewbox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M4 5.75a.25.25 0 1 0 0 .5.25.25 0 0 0 0-.5M2.25 6a1.75 1.75 0 1 1 3.5 0 1.75 1.75 0 0 1-3.5 0m1.5 6a.25.25 0 1 1 .5 0 .25.25 0 0 1-.5 0M4 10.25a1.75 1.75 0 1 0 0 3.5 1.75 1.75 0 0 0 0-3.5M3.75 18a.25.25 0 1 1 .5 0 .25.25 0 0 1-.5 0M4 16.25a1.75 1.75 0 1 0 0 3.5 1.75 1.75 0 0 0 0-3.5m5 1a.75.75 0 0 0 0 1.5h12a.75.75 0 0 0 0-1.5zM8.25 12a.75.75 0 0 1 .75-.75h12a.75.75 0 0 1 0 1.5H9a.75.75 0 0 1-.75-.75M9 5.25a.75.75 0 0 0 0 1.5h12a.75.75 0 0 0 0-1.5z"
          fill="currentColor"
          fill-rule="evenodd"
        >
        </path>
      </svg>
      Naviger
    </button>
    <dialog
      closedby="any"
      data-placement="center"
      id="<removed>"
      style="width: fit-content; min-width: 20rem;"
    >
      <button
        aria-label="Lukk dialogvindu"
        command="close"
        commandfor="_r_d_"
        data-color="neutral"
        data-icon="true"
        data-variant="tertiary"
        type="button"
      >
      </button>
      <h2>
        Skjemanavigasjon
      </h2>
      <div>
        <details
          data-active-step-label="Dokumentasjon"
          data-state="idle"
          open
        >
          <summary>
            <span>
              Testsøknad
            </span>
          </summary>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Kontaktinfo
          </button>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Prosjektet
          </button>
          <button
            aria-current="step"
            data-state="active"
            data-variant="default"
          >
            <div>
            </div>
            Dokumentasjon
          </button>
          <button
            data-state="idle"
            data-variant="submission"
          >
            <div>
            </div>
            Innsending
          </button>
          <button
            data-state="idle"
            data-variant="confirmation"
            disabled
          >
            <div>
            </div>
            Kvittering
          </button>
        </details>
      </div>
    </dialog>
  </div>
  <div data-color-scheme="light">
    <h1 data-size="md">
      Testsøknad
    </h1>
    <form
      data-show-optional="false"
      data-show-required="true"
      data-show-summary="true"
      data-variant="outline"
    >
      <h2 data-size="sm">
        Dokumentasjon
      </h2>
      <div>
      </div>
      <ds-field
        aria-invalid="false"
        role="presentation"
        tabindex="0"
      >
        <label
          data-weight="medium"
          for="<removed>"
        >
          <span>
            Last opp dokumentasjon
          </span>
        </label>
        <div
          data-field="description"
          id="<removed>"
        >
          Du kan laste opp filer i PDF-format. Filer kan være opptil 25 MB.
        </div>
        <div data-variant="default">
          <div>
          </div>
          <button
            aria-label="Velg filer"
            data-variant="secondary"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              height="1em"
              role="img"
              viewbox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M6.97 9.03a.75.75 0 0 0 1.06 0l3.22-3.22v8.69a.75.75 0 0 0 1.5 0V5.81l3.22 3.22a.75.75 0 1 0 1.06-1.06l-4.5-4.5a.75.75 0 0 0-1.06 0l-4.5 4.5a.75.75 0 0 0 0 1.06M4.75 15.5a.75.75 0 0 0-1.5 0V19c0 .966.784 1.75 1.75 1.75h14A1.75 1.75 0 0 0 20.75 19v-3.5a.75.75 0 0 0-1.5 0V19a.25.25 0 0 1-.25.25H5a.25.25 0 0 1-.25-.25z"
                fill="currentColor"
                fill-rule="evenodd"
              >
              </path>
            </svg>
          </button>
        </div>
        <input
          accept="application/pdf"
          aria-describedby="<removed>"
          aria-invalid="false"
          id="<removed>"
          multiple
          required
          style="border: 0px; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
          tabindex="-1"
          type="file"
        >
      </ds-field>
      <ds-field>
        <label
          data-weight="medium"
          for="<removed>"
        >
          <span>
            Kommentarer til dokumentasjon
          </span>
        </label>
        <div
          data-field="description"
          id="<removed>"
        >
          Ytterlige kommentarer til dokumentasjonen du har lastet opp.
        </div>
        <textarea
          aria-describedby="<removed>"
          aria-invalid="false"
          id="<removed>"
          name="addition"
          style="--_ds-field-sizing: 70px;"
        >
        </textarea>
      </ds-field>
      <div>
        <button
          data-variant="secondary"
          style="flex: 1 1 0%;"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="none"
            focusable="false"
            height="1em"
            role="img"
            viewbox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.97 6.97a.75.75 0 1 1 1.06 1.06l-3.22 3.22H19a.75.75 0 0 1 0 1.5H6.81l3.22 3.22a.75.75 0 1 1-1.06 1.06l-4.5-4.5a.75.75 0 0 1 0-1.06z"
              fill="currentColor"
            >
            </path>
          </svg>
          Forrige
        </button>
        <button
          data-variant="secondary"
          style="flex: 1 1 0%;"
          type="button"
        >
          Neste
          <svg
            aria-hidden="true"
            fill="none"
            focusable="false"
            height="1em"
            role="img"
            viewbox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.088 6.873a.75.75 0 0 1 .942.097l4.5 4.5a.75.75 0 0 1 0 1.06l-4.5 4.5a.75.75 0 0 1-1.06-1.06l3.22-3.22H5a.75.75 0 0 1-.75-.74V12a.75.75 0 0 1 .75-.75h12.19l-3.22-3.22a.75.75 0 0 1 .118-1.157"
              fill="currentColor"
            >
            </path>
          </svg>
        </button>
      </div>
      <dialog
        data-placement="center"
        id="<removed>"
        style="width: fit-content;"
      >
        <div>
          <h2 data-size="xs">
            Er du sikker på at du vil sende inn skjema?
          </h2>
          <div>
            <button
              data-variant="secondary"
              style="flex: 1 1 0%;"
              type="button"
            >
              Avbryt
            </button>
            <button
              data-variant="primary"
              style="flex: 2 1 0%;"
              type="submit"
            >
              Send inn
              <svg
                aria-hidden="true"
                fill="none"
                focusable="false"
                height="1em"
                role="img"
                viewbox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M6.317 4.32a.75.75 0 0 0-1.023.932L7.704 12l-2.41 6.748a.75.75 0 0 0 1.023.932l15-7a.75.75 0 0 0 0-1.36zm2.712 6.93L7.31 6.44 19.227 12 7.31 17.56l1.719-4.81H12.5a.75.75 0 0 0 0-1.5z"
                  fill="currentColor"
                  fill-rule="evenodd"
                >
                </path>
              </svg>
            </button>
          </div>
        </div>
      </dialog>
    </form>
  </div>
</div>
`;

exports[`Form Page 4 1`] = `
<div data-size="auto">
  <div>
    <div>
      <details
        data-active-step-label="Innsending"
        data-state="idle"
        open
      >
        <summary>
          <span>
            Testsøknad
          </span>
        </summary>
        <button
          data-state="idle"
          data-variant="default"
        >
          <div>
          </div>
          Kontaktinfo
        </button>
        <button
          data-state="idle"
          data-variant="default"
        >
          <div>
          </div>
          Prosjektet
        </button>
        <button
          data-state="idle"
          data-variant="default"
        >
          <div>
          </div>
          Dokumentasjon
        </button>
        <button
          aria-current="step"
          data-state="active"
          data-variant="submission"
        >
          <div>
          </div>
          Innsending
        </button>
        <button
          data-state="idle"
          data-variant="confirmation"
          disabled
        >
          <div>
          </div>
          Kvittering
        </button>
      </details>
    </div>
  </div>
  <div>
    <button
      command="show-modal"
      commandfor="_r_l_"
      data-color="neutral"
      data-variant="secondary"
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="none"
        focusable="false"
        height="1em"
        role="img"
        viewbox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M4 5.75a.25.25 0 1 0 0 .5.25.25 0 0 0 0-.5M2.25 6a1.75 1.75 0 1 1 3.5 0 1.75 1.75 0 0 1-3.5 0m1.5 6a.25.25 0 1 1 .5 0 .25.25 0 0 1-.5 0M4 10.25a1.75 1.75 0 1 0 0 3.5 1.75 1.75 0 0 0 0-3.5M3.75 18a.25.25 0 1 1 .5 0 .25.25 0 0 1-.5 0M4 16.25a1.75 1.75 0 1 0 0 3.5 1.75 1.75 0 0 0 0-3.5m5 1a.75.75 0 0 0 0 1.5h12a.75.75 0 0 0 0-1.5zM8.25 12a.75.75 0 0 1 .75-.75h12a.75.75 0 0 1 0 1.5H9a.75.75 0 0 1-.75-.75M9 5.25a.75.75 0 0 0 0 1.5h12a.75.75 0 0 0 0-1.5z"
          fill="currentColor"
          fill-rule="evenodd"
        >
        </path>
      </svg>
      Naviger
    </button>
    <dialog
      closedby="any"
      data-placement="center"
      id="<removed>"
      style="width: fit-content; min-width: 20rem;"
    >
      <button
        aria-label="Lukk dialogvindu"
        command="close"
        commandfor="_r_l_"
        data-color="neutral"
        data-icon="true"
        data-variant="tertiary"
        type="button"
      >
      </button>
      <h2>
        Skjemanavigasjon
      </h2>
      <div>
        <details
          data-active-step-label="Innsending"
          data-state="idle"
          open
        >
          <summary>
            <span>
              Testsøknad
            </span>
          </summary>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Kontaktinfo
          </button>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Prosjektet
          </button>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Dokumentasjon
          </button>
          <button
            aria-current="step"
            data-state="active"
            data-variant="submission"
          >
            <div>
            </div>
            Innsending
          </button>
          <button
            data-state="idle"
            data-variant="confirmation"
            disabled
          >
            <div>
            </div>
            Kvittering
          </button>
        </details>
      </div>
    </dialog>
  </div>
  <div data-color-scheme="light">
    <h1 data-size="md">
      Testsøknad
    </h1>
    <form
      data-show-optional="false"
      data-show-required="true"
      data-show-summary="true"
      data-variant="outline"
    >
      <h2>
        Innsending
      </h2>
      <p data-variant="default">
        Send inn søknaden.
      </p>
      <div>
        <button
          data-variant="secondary"
          style="flex: 1 1 0%;"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="none"
            focusable="false"
            height="1em"
            role="img"
            viewbox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.97 6.97a.75.75 0 1 1 1.06 1.06l-3.22 3.22H19a.75.75 0 0 1 0 1.5H6.81l3.22 3.22a.75.75 0 1 1-1.06 1.06l-4.5-4.5a.75.75 0 0 1 0-1.06z"
              fill="currentColor"
            >
            </path>
          </svg>
          Forrige
        </button>
        <button
          data-variant="primary"
          style="flex: 2 1 0%;"
          type="button"
        >
          Send inn skjema
          <svg
            aria-hidden="true"
            fill="none"
            focusable="false"
            height="1em"
            role="img"
            viewbox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M6.317 4.32a.75.75 0 0 0-1.023.932L7.704 12l-2.41 6.748a.75.75 0 0 0 1.023.932l15-7a.75.75 0 0 0 0-1.36zm2.712 6.93L7.31 6.44 19.227 12 7.31 17.56l1.719-4.81H12.5a.75.75 0 0 0 0-1.5z"
              fill="currentColor"
              fill-rule="evenodd"
            >
            </path>
          </svg>
        </button>
      </div>
      <dialog
        data-placement="center"
        id="<removed>"
        style="width: fit-content;"
      >
        <div>
          <h2 data-size="xs">
            Er du sikker på at du vil sende inn skjema?
          </h2>
          <div>
            <button
              data-variant="secondary"
              style="flex: 1 1 0%;"
              type="button"
            >
              Avbryt
            </button>
            <button
              data-variant="primary"
              style="flex: 2 1 0%;"
              type="submit"
            >
              Send inn
              <svg
                aria-hidden="true"
                fill="none"
                focusable="false"
                height="1em"
                role="img"
                viewbox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M6.317 4.32a.75.75 0 0 0-1.023.932L7.704 12l-2.41 6.748a.75.75 0 0 0 1.023.932l15-7a.75.75 0 0 0 0-1.36zm2.712 6.93L7.31 6.44 19.227 12 7.31 17.56l1.719-4.81H12.5a.75.75 0 0 0 0-1.5z"
                  fill="currentColor"
                  fill-rule="evenodd"
                >
                </path>
              </svg>
            </button>
          </div>
        </div>
      </dialog>
    </form>
  </div>
</div>
`;

exports[`Form Page 5 1`] = `
<div data-size="auto">
  <div>
    <div>
      <details
        data-active-step-label="Kvittering"
        data-state="idle"
        open
      >
        <summary>
          <span>
            Testsøknad
          </span>
        </summary>
        <button
          data-state="idle"
          data-variant="default"
        >
          <div>
          </div>
          Kontaktinfo
        </button>
        <button
          data-state="idle"
          data-variant="default"
        >
          <div>
          </div>
          Prosjektet
        </button>
        <button
          data-state="idle"
          data-variant="default"
        >
          <div>
          </div>
          Dokumentasjon
        </button>
        <button
          data-state="idle"
          data-variant="submission"
        >
          <div>
          </div>
          Innsending
        </button>
        <button
          aria-current="step"
          data-state="active"
          data-variant="confirmation"
          disabled
        >
          <div>
          </div>
          Kvittering
        </button>
      </details>
    </div>
  </div>
  <div>
    <button
      command="show-modal"
      commandfor="_r_r_"
      data-color="neutral"
      data-variant="secondary"
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="none"
        focusable="false"
        height="1em"
        role="img"
        viewbox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M4 5.75a.25.25 0 1 0 0 .5.25.25 0 0 0 0-.5M2.25 6a1.75 1.75 0 1 1 3.5 0 1.75 1.75 0 0 1-3.5 0m1.5 6a.25.25 0 1 1 .5 0 .25.25 0 0 1-.5 0M4 10.25a1.75 1.75 0 1 0 0 3.5 1.75 1.75 0 0 0 0-3.5M3.75 18a.25.25 0 1 1 .5 0 .25.25 0 0 1-.5 0M4 16.25a1.75 1.75 0 1 0 0 3.5 1.75 1.75 0 0 0 0-3.5m5 1a.75.75 0 0 0 0 1.5h12a.75.75 0 0 0 0-1.5zM8.25 12a.75.75 0 0 1 .75-.75h12a.75.75 0 0 1 0 1.5H9a.75.75 0 0 1-.75-.75M9 5.25a.75.75 0 0 0 0 1.5h12a.75.75 0 0 0 0-1.5z"
          fill="currentColor"
          fill-rule="evenodd"
        >
        </path>
      </svg>
      Naviger
    </button>
    <dialog
      closedby="any"
      data-placement="center"
      id="<removed>"
      style="width: fit-content; min-width: 20rem;"
    >
      <button
        aria-label="Lukk dialogvindu"
        command="close"
        commandfor="_r_r_"
        data-color="neutral"
        data-icon="true"
        data-variant="tertiary"
        type="button"
      >
      </button>
      <h2>
        Skjemanavigasjon
      </h2>
      <div>
        <details
          data-active-step-label="Kvittering"
          data-state="idle"
          open
        >
          <summary>
            <span>
              Testsøknad
            </span>
          </summary>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Kontaktinfo
          </button>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Prosjektet
          </button>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Dokumentasjon
          </button>
          <button
            data-state="idle"
            data-variant="submission"
          >
            <div>
            </div>
            Innsending
          </button>
          <button
            aria-current="step"
            data-state="active"
            data-variant="confirmation"
            disabled
          >
            <div>
            </div>
            Kvittering
          </button>
        </details>
      </div>
    </dialog>
  </div>
  <div data-color-scheme="light">
    <h1 data-size="md">
      Testsøknad
    </h1>
    <form
      data-show-optional="false"
      data-show-required="true"
      data-show-summary="true"
      data-variant="outline"
    >
      <div>
        <h2 data-size="sm">
          Kvittering
        </h2>
        <p
          data-size="xl"
          data-variant="default"
        >
          Takk!
        </p>
        <p data-variant="default">
          Vi har mottatt din søknad. Du hører tilbake innen en måned.
        </p>
      </div>
      <div>
      </div>
      <dialog
        data-placement="center"
        id="<removed>"
        style="width: fit-content;"
      >
        <div>
          <h2 data-size="xs">
            Er du sikker på at du vil sende inn skjema?
          </h2>
          <div>
            <button
              data-variant="secondary"
              style="flex: 1 1 0%;"
              type="button"
            >
              Avbryt
            </button>
            <button
              data-variant="primary"
              style="flex: 2 1 0%;"
              type="submit"
            >
              Send inn
              <svg
                aria-hidden="true"
                fill="none"
                focusable="false"
                height="1em"
                role="img"
                viewbox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M6.317 4.32a.75.75 0 0 0-1.023.932L7.704 12l-2.41 6.748a.75.75 0 0 0 1.023.932l15-7a.75.75 0 0 0 0-1.36zm2.712 6.93L7.31 6.44 19.227 12 7.31 17.56l1.719-4.81H12.5a.75.75 0 0 0 0-1.5z"
                  fill="currentColor"
                  fill-rule="evenodd"
                >
                </path>
              </svg>
            </button>
          </div>
        </div>
      </dialog>
    </form>
  </div>
</div>
`;

exports[`Form Story 1`] = `
<div data-size="auto">
  <div>
    <div>
      <details
        data-active-step-label="Kontaktinfo"
        data-state="idle"
        open
      >
        <summary>
          <span>
            Testsøknad
          </span>
        </summary>
        <button
          aria-current="step"
          data-state="active"
          data-variant="default"
        >
          <div>
          </div>
          Kontaktinfo
        </button>
        <button
          data-state="idle"
          data-variant="default"
        >
          <div>
          </div>
          Prosjektet
        </button>
        <button
          data-state="idle"
          data-variant="default"
        >
          <div>
          </div>
          Dokumentasjon
        </button>
        <button
          data-state="idle"
          data-variant="submission"
        >
          <div>
          </div>
          Innsending
        </button>
        <button
          data-state="idle"
          data-variant="confirmation"
          disabled
        >
          <div>
          </div>
          Kvittering
        </button>
      </details>
    </div>
  </div>
  <div>
    <button
      command="show-modal"
      commandfor="_r_1_"
      data-color="neutral"
      data-variant="secondary"
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="none"
        focusable="false"
        height="1em"
        role="img"
        viewbox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M4 5.75a.25.25 0 1 0 0 .5.25.25 0 0 0 0-.5M2.25 6a1.75 1.75 0 1 1 3.5 0 1.75 1.75 0 0 1-3.5 0m1.5 6a.25.25 0 1 1 .5 0 .25.25 0 0 1-.5 0M4 10.25a1.75 1.75 0 1 0 0 3.5 1.75 1.75 0 0 0 0-3.5M3.75 18a.25.25 0 1 1 .5 0 .25.25 0 0 1-.5 0M4 16.25a1.75 1.75 0 1 0 0 3.5 1.75 1.75 0 0 0 0-3.5m5 1a.75.75 0 0 0 0 1.5h12a.75.75 0 0 0 0-1.5zM8.25 12a.75.75 0 0 1 .75-.75h12a.75.75 0 0 1 0 1.5H9a.75.75 0 0 1-.75-.75M9 5.25a.75.75 0 0 0 0 1.5h12a.75.75 0 0 0 0-1.5z"
          fill="currentColor"
          fill-rule="evenodd"
        >
        </path>
      </svg>
      Naviger
    </button>
    <dialog
      closedby="any"
      data-placement="center"
      id="<removed>"
      style="width: fit-content; min-width: 20rem;"
    >
      <button
        aria-label="Lukk dialogvindu"
        command="close"
        commandfor="_r_1_"
        data-color="neutral"
        data-icon="true"
        data-variant="tertiary"
        type="button"
      >
      </button>
      <h2>
        Skjemanavigasjon
      </h2>
      <div>
        <details
          data-active-step-label="Kontaktinfo"
          data-state="idle"
          open
        >
          <summary>
            <span>
              Testsøknad
            </span>
          </summary>
          <button
            aria-current="step"
            data-state="active"
            data-variant="default"
          >
            <div>
            </div>
            Kontaktinfo
          </button>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Prosjektet
          </button>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Dokumentasjon
          </button>
          <button
            data-state="idle"
            data-variant="submission"
          >
            <div>
            </div>
            Innsending
          </button>
          <button
            data-state="idle"
            data-variant="confirmation"
            disabled
          >
            <div>
            </div>
            Kvittering
          </button>
        </details>
      </div>
    </dialog>
  </div>
  <div data-color-scheme="light">
    <h1 data-size="md">
      Testsøknad
    </h1>
    <form
      data-show-optional="false"
      data-show-required="true"
      data-show-summary="true"
      data-variant="outline"
    >
      <h2 data-size="sm">
        Kontaktinfo
      </h2>
      <div>
      </div>
      <ds-field>
        <label
          data-weight="medium"
          for="<removed>"
        >
          <span>
            Fornavn
          </span>
        </label>
        <div>
          <input
            aria-invalid="false"
            autocomplete="given-name"
            id="<removed>"
            name="firstName"
            required
            type="text"
          >
        </div>
      </ds-field>
      <ds-field>
        <label
          data-weight="medium"
          for="<removed>"
        >
          <span>
            Etternavn
          </span>
        </label>
        <input
          aria-invalid="false"
          autocomplete="family-name"
          id="<removed>"
          name="lastName"
          required
          type="text"
        >
      </ds-field>
      <fieldset
        aria-labelledby="<removed>"
        id="<removed>"
        tabindex="-1"
      >
        <legend
          data-weight="medium"
          id="<removed>"
        >
          <span>
            Hvordan ønsker du at vi skal kontakte deg?
          </span>
        </legend>
        <p
          data-variant="default"
          id="<removed>"
        >
          Velg ett eller flere alternativer
        </p>
        <ds-field data-clickdelegatefor="<removed>">
          <input
            aria-invalid="false"
            id="<removed>"
            name="contactMethods"
            required
            type="checkbox"
            value="epost"
          >
          <label
            data-weight="regular"
            for="<removed>"
          >
            <span>
              E-post
            </span>
          </label>
        </ds-field>
        <ds-field data-clickdelegatefor="<removed>">
          <input
            aria-invalid="false"
            id="<removed>"
            name="contactMethods"
            required
            type="checkbox"
            value="telefon"
          >
          <label
            data-weight="regular"
            for="<removed>"
          >
            <span>
              Telefon
            </span>
          </label>
        </ds-field>
        <ds-field data-clickdelegatefor="<removed>">
          <input
            aria-invalid="false"
            id="<removed>"
            name="contactMethods"
            required
            type="checkbox"
            value="sms"
          >
          <label
            data-weight="regular"
            for="<removed>"
          >
            <span>
              SMS
            </span>
          </label>
        </ds-field>
      </fieldset>
      <div>
        <button
          data-variant="secondary"
          style="flex: 1 1 0%;"
          type="button"
        >
          Neste
          <svg
            aria-hidden="true"
            fill="none"
            focusable="false"
            height="1em"
            role="img"
            viewbox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.088 6.873a.75.75 0 0 1 .942.097l4.5 4.5a.75.75 0 0 1 0 1.06l-4.5 4.5a.75.75 0 0 1-1.06-1.06l3.22-3.22H5a.75.75 0 0 1-.75-.74V12a.75.75 0 0 1 .75-.75h12.19l-3.22-3.22a.75.75 0 0 1 .118-1.157"
              fill="currentColor"
            >
            </path>
          </svg>
        </button>
      </div>
      <dialog
        data-placement="center"
        id="<removed>"
        style="width: fit-content;"
      >
        <div>
          <h2 data-size="xs">
            Er du sikker på at du vil sende inn skjema?
          </h2>
          <div>
            <button
              data-variant="secondary"
              style="flex: 1 1 0%;"
              type="button"
            >
              Avbryt
            </button>
            <button
              data-variant="primary"
              style="flex: 2 1 0%;"
              type="submit"
            >
              Send inn
              <svg
                aria-hidden="true"
                fill="none"
                focusable="false"
                height="1em"
                role="img"
                viewbox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M6.317 4.32a.75.75 0 0 0-1.023.932L7.704 12l-2.41 6.748a.75.75 0 0 0 1.023.932l15-7a.75.75 0 0 0 0-1.36zm2.712 6.93L7.31 6.44 19.227 12 7.31 17.56l1.719-4.81H12.5a.75.75 0 0 0 0-1.5z"
                  fill="currentColor"
                  fill-rule="evenodd"
                >
                </path>
              </svg>
            </button>
          </div>
        </div>
      </dialog>
    </form>
  </div>
</div>
`;
